# cinema-summary-bot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: bootstrap.py  config.py  main.py  observability.py
app/models/: schemas.py
app/services/: pipeline.py  search.py
app/services/cache/: repository.py
app/services/llm/: summarizer.py
app/services/sources/: __init__.py  aggregator.py  base.py  omdb_adapter.py  tmdb_adapter.py  wikipedia_adapter.py
bot/: telegram_bot.py
tests/: test_api_logging.py  test_cache.py  test_observability.py  test_omdb_adapter.py  test_search.py  test_sources_aggregator.py  test_startup.py  test_summarizer.py
